	- Updated Italy events for NSB limitations
	- Made it so the 'Ukrainian Revolution' mission will fire everytime you go over 15 Chance of Revolt not just once
	- Fixed Syrian Civil War peace event firigng too early
	- Fixed TAI being unable to be puppeted as anyone other than CHI
	- BRA UNASUL focuses fixed™


Content:
	- Reworked Officer Corps for GRE, PRU, PAN, PAR, PHI, NEP, MNT, SUR, and NGR

Database
	- Added Nagmachon (IFV 1995) to Israel in 2000 bookmark
	- Updated Israel's population to match real life numbers
	- Patched remaining goals_shine.gfx errors
	- Switched loadup scenario to be 2000 vs 2017
	- Increased Greece's starting military spending level by 1
	- Changed Greece's starting convoys 150 -> 400
	- Futuristic Nuclear Reactors now has the proper historical year of 2015

Graphics:
	- New models for Mig21, Mig23, Su17, Su24, Mig29, Su27, Su33, Su57, and correction to the tu160 models
	- f111 aardvark model added for USA
	- F14 Model Replaced to match USA Tech Tree Icon (F15)
	- J15, Type 003 Aircraft Carrier, and ZBD-97 for China model added
	- Brazilian tank model added
	- APC and IFV models switched around to correctly match icons (APC Battalions previously showed as IFV models)
	- Optimized current in game models to have a lower and more light weight impact on game runtime

Localization:
	- ALCM launch button trigger tooltip rework

Modding:
	- added instructions for map changes to Millennium_Dawn\history\states\#readme.txt

v1.6.1 - Hotfix
AI:
	- Removed minors from mockup missile defense AI (including HLS & SMA)
	- Improved project AI so they should now be more willing to put other buildings in project queues
	- Improved logging of AI Investment targets so Bird can make better AI (Bird fix AI)
	- Added a AI check for the AI to ignore taking debt if they fit well within targeted budgets
	- The AI will be more likely to keep their policies in line with their focus trees
	- AI will now use 'revert ideas' decisions for Poland