@@ -170,6 +170,7 @@ GRE_CYP_category = {
 
 		visible = {
 			tag = GRE
+			has_country_flag = GRE_Enosis_In_Progress
 		}
 
 		complete_effect = {
@@ -212,6 +213,7 @@ GRE_CYP_category = {
 		cost = 30
 
 		visible = {
+			has_country_flag = GRE_Enosis_In_Progress
 			tag = GRE
 		}
 
@@ -256,6 +258,7 @@ GRE_CYP_category = {
 		cost = 30
 
 		visible = {
+			has_country_flag = GRE_Enosis_In_Progress
 			tag = GRE
 		}
 
@@ -300,6 +303,7 @@ GRE_CYP_category = {
 		cost = 30
 
 		visible = {
+			has_country_flag = GRE_Enosis_In_Progress
 			tag = GRE
 		}
 
@@ -526,10 +530,7 @@ GRE_CYP_category = {
 	GRE_unification_talks = {
 
 		icon = decision_generic_decision
-		visible = { }
-
-		visible = {
-		}
+		visible = { has_country_flag = GRE_Enosis_In_Progress }
 
 		activation = {
 			AND = {
@@ -539,12 +540,14 @@ GRE_CYP_category = {
 					}
 				}
 				GRE = {
+					has_country_flag = GRE_Enosis_In_Progress
 					has_completed_focus = GRE_tale
 				}
 			}
 		}
 
 		available = {
+			has_country_flag = GRE_Enosis_In_Progress
 			custom_trigger_tooltip = {
 				tooltip = GRE_unification_TT
 				check_variable = { CYP_unification = 100 }
@@ -589,11 +592,13 @@ GRE_CYP_category = {
 		icon = decision_hol_exchange_intelligence_data
 
 		available = {
+			has_country_flag = GRE_Enosis_In_Progress
 			check_variable = { 145.GRE_SUPPORT > 50 }
 			check_variable = { 146.GRE_SUPPORT > 50 }
 		}
 
 		visible = {
+			has_country_flag = GRE_Enosis_In_Progress
 			tag = GRE
 			check_variable = { CYP_unification = 100 }
 		}
@@ -607,18 +612,40 @@ GRE_CYP_category = {
 			146 = {
 				add_core_of = GRE
 			}
-			812 = {
-				add_core_of = GRE
-			}
 			GRE = {
 				transfer_state = 146
 			}
-			ENG = {
-				news_event = { id = greece.11 days = 1 }
+			GRE = {
+				country_event = { id = greece.23 }
 			}
 		}
 		ai_will_do = {
 			factor = 25
+		}
+	}
+	GRE_return_akrotiri = {
+
+		icon = decision_hol_exchange_intelligence_data
+
+		available = {
+			has_country_flag = GRE_British_Akrotiri
+		}
+		visible = {
+			has_country_flag = GRE_British_Akrotiri
+		}
+
+		days_re_enable = 365
+
+		fixed_random_seed = no
+
+		fire_only_once = no
+
+		complete_effect = {
+			log = "[GetDateText]: [Root.GetName]: Decision GRE_return_akrotiri"
+			ENG = { country_event = { id = greece.24 } }
+		}
+		ai_will_do = {
+			factor = 10
 		}
 	}
 }
