@@ -5257,7 +5257,7 @@ focus_tree = {
 		search_filters = { FOCUS_FILTER_POLITICAL }
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: GRE_tale"
-			activate_mission = GRE_unification_talks
+			set_country_flag = GRE_Enosis_In_Progress
 			custom_effect_tooltip = GRE_north_10_TT
 			custom_effect_tooltip = GRE_south_60_TT
 			custom_effect_tooltip = GRE_brit_30_TT
@@ -5535,6 +5535,7 @@ focus_tree = {
 
 		search_filters = { FOCUS_FILTER_ANNEXATION }
 		completion_reward = {
+			clr_country_flag = GRE_Enosis_In_Progress
 			custom_effect_tooltip = GRE_unification_at_last_TT
 			log = "[GetDateText]: [This.GetName]: GRE_unification_at_last"
 		}
