@@ -601,3 +601,131 @@ country_event = {
 		log = "[GetDateText]: [This.GetName]: greece.22.a executed"
 	}
 }
+
+country_event = { # ENOSIS AT LAST
+	id = greece.23
+	title = greece.23.t
+	desc = greece.23.d
+	#picture =
+
+	fixed_random_seed = no
+
+	is_triggered_only = yes
+
+	option = {
+		name = greece.23.a
+		log = "[GetDateText]: [This.GetName]: greece.23.a executed"
+		ENG = { country_event = { id = greece.24 } }
+		812 = {
+			add_core_of = GRE
+		}
+	}
+	option = {
+		name = greece.23.b
+		log = "[GetDateText]: [This.GetName]: greece.23.b executed"
+		ENG = {	country_event = { id = greece.25 } }
+	}
+}
+
+country_event = { # RETURN AKROTIRI
+	id = greece.24
+	title = greece.24.t
+	desc = greece.24.d
+	#picture =
+
+	is_triggered_only = yes
+
+	option = {
+		name = greece.24.a
+		log = "[GetDateText]: [This.GetName]: greece.24.a executed"
+		GRE = {
+			country_event = { id = greece.26 }
+			IF = {
+				limit = { has_country_flag = GRE_British_Akrotiri }
+				clr_country_flag = GRE_British_Akrotiri
+			}
+		}
+		ai_chance = {
+			factor = 0.25
+			modifier = {
+				OR = {
+					has_war = yes
+					threat > 0.10
+					has_country_flag = ai_yes_unit_build
+					has_country_flag = AI_is_threatened
+				}
+				factor = 0.25
+			}
+		}
+	}
+	option = {
+		name = greece.24.b
+		log = "[GetDateText]: [This.GetName]: greece.24.b executed"
+		GRE = {
+			country_event = { id = greece.27 }
+			IF = {
+				limit = {
+					NOT = { has_country_flag = GRE_British_Akrotiri }
+					set_country_flag = GRE_British_Akrotiri
+				}
+			}
+		}
+		ai_chance = {
+			factor = 0.75
+			modifier = {
+				OR = {
+				has_war = yes
+				threat > 0.10
+				has_country_flag = ai_yes_unit_build
+				has_country_flag = AI_is_threatened
+					}
+				factor = 4
+			}
+		}
+	}
+}
+
+country_event = { # STAY IN CYPRUS
+	id = greece.25
+	title = greece.25.t
+	desc = greece.25.d
+	#picture =
+
+	is_triggered_only = yes
+
+	option = {
+		name = greece.25.a
+		log = "[GetDateText]: [This.GetName]: greece.25.a executed"
+	}
+}
+
+country_event = { # BRITS AGREE
+	id = greece.26
+	title = greece.26.t
+	desc = greece.26.d
+	picture = GFX_british_flag_two
+
+	is_triggered_only = yes
+
+	option = {
+		name = greece.26.a
+		log = "[GetDateText]: [This.GetName]: greece.26.a executed"
+		GRE = {
+			transfer_state = 812
+		}
+	}
+}
+
+country_event = { # BRITS DISAGREE
+	id = greece.27
+	title = greece.27.t
+	desc = greece.27.d
+	picture = GFX_declined_offer_no
+
+	is_triggered_only = yes
+
+	option = {
+		name = greece.27.a
+		log = "[GetDateText]: [This.GetName]: greece.27.a executed"
+		}
+}
