@@ -106,6 +106,7 @@
  GRE_please_north: "Please the Turkish Cypriots"
  GRE_lobby_brit: "Lobby British Support"
  GRE_unification_talks: "Enosis Conference"
+ GRE_enosis: "Finalise Unification"
  TUR_CYP_incite_riot: "Incite Riots in Northern Cyprus"
  TUR_CYP_propaganda_north: "Northern Anti-Greek Propaganda"
  TUR_CYP_propaganda_south: "Southern Anti-Greek Propaganda"
@@ -613,3 +614,20 @@
  greece.22.t: "Austerity Tensions Dissipate"
  greece.22.d: "It is generally a 'quiet' day for Greece, as anti-austerity demonstrations have seemed to stop for the time being. Perhaps it is just the exhaustion of constant protest, perhaps it is something else."
  greece.22.a: "Thank god."
+ greece.23.t: "Enosis At Last!"
+ greece.23.d: "After decades of unrest, separation and anxiety over familial bonds and connections being apart from one another, the Enosis conferences have paid off.\n\nGreek Cypriots are celebrating in the streets, the Turkish Cypriots have been appeased sufficiently and the British seem somewhat happy with the arrangements that we have decided upon.\n\nThere is still one lingering question though... what to do about Akrotiri and Dhekelia?"
+ greece.23.a: "Request Full Control"
+ greece.23.b: "Allow The RAF To Maintain Bases"
+ greece.24.t: "The Greek Government Wants Akrotiri Back!"
+ greece.24.d: "Having achieved their goals of Enosis, the Greek government have come to us hat in hand to request we return the bases of Akrotiri and Dhekelia... should we let them return to Greek rule?"
+ greece.24.a: "It Would Be Wrong Not To!"
+ greece.24.b: "Not A Chance!"
+ greece.25.t: "The Greek Government Allows Us To Stay In Cyprus!"
+ greece.25.d: "Having achieved their goals of Enosis, the Greek government have come to the realisation that the return of Akrotiri and Dhekelia would be inconvenient for all, thankfully we will not have to move our troops from this land."
+ greece.25.a: "Jolly Good Then!"
+ greece.26.t: "The British Government Agree!"
+ greece.26.d: "Today, after a long winded ceremony and the turning off of the lights in RAF Akrotiri and Dhekelia for the last time under British rule, [ENG.GetLeader] and [GRE.GetLeader] signed an agreement formally ceding the former British bases over to Greece to be under rightful Greek rule once more."
+ greece.26.a: "A Monumentous Event"
+ greece.27.t: "The British Government Decline!"
+ greece.27.d: "After sending the request of rightful territory through to [ENG.GetLeader], we did not have to wait long for a response.\n\nRegretably, the British government have elected to keep the territories of Akrotiri and Dhekelia, while this may feel like an insult to all Greek peoples, many are calling for cooler heads to prevail. Perhaps we can solve the issue in the future?"
+ greece.27.a: "Those People Are Right You Know"
