@@ -25,6 +25,7 @@ Bugfixes:
 
 Content:
 	- Reworked Officer Corps for GRE, PRU, PAN, PAR, PHI, NEP, MNT, SUR, and NGR
+	- GRE-CYP Enosis event chain allows for Akrotiri's return under correct conditions
 
 Database
 	- Added Nagmachon (IFV 1995) to Israel in 2000 bookmark
